Fixing disambiguation of module imports.